--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,11 @@ dependencies:
   # widgets
   animations: ^2.0.7
   async_builder: ^1.3.1
-  cached_network_image: ^3.2.1
+  cached_network_image: ^3.2.3
   expandable: ^5.0.1
   flutter_cache_manager: ^3.3.0
   flutter_custom_tabs: ^1.0.4
-  flutter_screen_lock: ^7.0.2
+  flutter_screen_lock: ^9.0.0+1
   flutter_staggered_grid_view: ^0.6.2
   flutter_typeahead: ^4.0.0
   font_awesome_flutter: ^10.1.0
@@ -40,7 +40,7 @@ dependencies:
   dio: ^4.0.6
   dio_cache_interceptor: ^3.3.1
   dio_cache_interceptor_db_store: ^5.0.0
-  drift: ^2.0.2
+  drift: ^2.3.0
   external_path: ^1.0.1
   filesize: ^2.0.1
   freezed_annotation: ^2.0.3
@@ -48,20 +48,20 @@ dependencies:
   intl: ^0.17.0
   json_annotation: ^4.6.0
   mime: ^1.0.2
-  mutex: ^3.0.0
+  mutex: ^3.0.1
   notified_preferences: ^2.0.0
   package_info_plus: ^1.4.2
   path: ^1.8.1
   path_provider: ^2.0.11
   path_to_regexp: ^0.4.0
   permission_handler: ^10.0.0
-  pub_semver: ^2.1.2
+  pub_semver: ^2.1.3
   relative_time: ^2.2.1
-  shared_storage: ^0.6.0
+  shared_storage: ^0.7.0
   share_plus: ^6.2.0
-  sqlite3_flutter_libs: ^0.5.10
+  sqlite3_flutter_libs: ^0.5.12
   store_checker: ^1.1.0
-  talker: ^2.0.0+1
+  talker: ^2.1.0
   url_launcher: ^6.1.6
   wakelock: ^0.6.1+2
   window_manager: ^0.2.5
