--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: e1547
 description: A mobile app for e621+e926.
-version: 15.0.1+70
+version: 15.0.2-beta.2+70
 publish_to: none
 
 environment:
@@ -12,6 +12,7 @@ dependencies:
   animations: ^2.0.7
   async_builder: ^1.3.1
   cached_network_image: ^3.2.3
+  cached_video_player: ^2.0.3
   expandable: ^5.0.1
   flutter_cache_manager: ^3.3.0
   flutter_custom_tabs: ^1.0.4
@@ -30,7 +31,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   sliding_sheet: ^0.5.0
   sliver_tools: ^0.2.8
-  cached_video_player: ^2.0.3
+  webview_flutter: ^3.0.4
 
   # data
   app_links: ^3.3.0
@@ -57,13 +58,14 @@ dependencies:
   permission_handler: ^10.0.0
   pub_semver: ^2.1.3
   relative_time: ^2.2.1
-  shared_storage: ^0.7.0
   share_plus: ^6.3.0
+  shared_storage: ^0.7.0
   sqlite3_flutter_libs: ^0.5.12
   store_checker: ^1.1.0
   talker: ^2.1.0
   url_launcher: ^6.1.7
   wakelock: ^0.6.1+2
+  webview_cookie_manager: ^2.0.6
   window_manager: ^0.2.5
 
   username_generator:
