--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "Downpour Development" "\0"
+            VALUE "CompanyName", "clynamic" "\0"
             VALUE "FileDescription", "e1547" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "e1547" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 Downpour Development. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 clynamic. All rights reserved." "\0"
             VALUE "OriginalFilename", "e1547.exe" "\0"
             VALUE "ProductName", "e1547" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
