--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   expandable: ^5.0.1
   flutter_cache_manager: ^3.3.0
   flutter_custom_tabs: ^1.0.4
-  flutter_screen_lock: ^9.0.0+1
+  flutter_screen_lock: ^9.0.1
   flutter_staggered_grid_view: ^0.6.2
   flutter_typeahead: ^4.3.7
   font_awesome_flutter: ^10.1.0
@@ -25,21 +25,21 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0-dev.1
   keyboard_dismisser: ^3.0.0
   like_button: ^2.0.4
-  local_auth: ^2.0.2
+  local_auth: ^2.1.5
   overflow_view: ^0.3.1
   photo_view: ^0.14.0
   provider: ^6.0.4
   pull_to_refresh: ^2.0.0
   sliding_sheet: ^0.5.0
-  sliver_tools: ^0.2.8
-  webview_flutter: ^4.0.2
+  sliver_tools: ^0.2.9
+  webview_flutter: ^4.0.5
 
   # data
   app_links: ^3.3.0
   async: ^2.9.0
   collection: ^1.16.0
   crypto: ^3.0.1
-  dio: ^5.0.0
+  dio: ^5.0.1
   dio_cache_interceptor: ^3.4.0
   dio_cache_interceptor_db_store: ^5.1.0
   drift: ^2.3.0
@@ -52,22 +52,22 @@ dependencies:
   mime: ^1.0.2
   mutex: ^3.0.1
   notified_preferences: ^2.0.0
-  package_info_plus: ^3.0.2
+  package_info_plus: ^3.0.3
   path: ^1.8.1
-  path_provider: ^2.0.11
+  path_provider: ^2.0.13
   path_to_regexp: ^0.4.0
   permission_handler: ^10.0.0
   pub_semver: ^2.1.3
   relative_time: ^3.0.0
-  share_plus: ^6.3.0
+  share_plus: ^6.3.1
   shared_storage: ^0.7.0
-  sqlite3_flutter_libs: ^0.5.12
+  sqlite3_flutter_libs: ^0.5.13
   store_checker: ^1.1.0
-  talker: ^2.1.0
-  url_launcher: ^6.1.7
+  talker: ^2.4.0
+  url_launcher: ^6.1.10
   wakelock: ^0.6.1+2
   webview_cookie_manager: ^2.0.6
-  window_manager: ^0.3.0
+  window_manager: ^0.3.1
 
   username_generator:
     git: https://github.com/clragon/username_generator.git
