--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,13 @@ dependencies:
 
   # widgets
   animations: ^2.0.7
-  async_builder: ^1.3.1
   cached_network_image: ^3.2.3
   cached_video_player: ^2.0.3
   expandable: ^5.0.1
   flutter_cache_manager: ^3.3.0
   flutter_custom_tabs: ^1.0.4
   flutter_screen_lock: ^9.0.1
+  flutter_sub: ^0.2.0
   flutter_staggered_grid_view: ^0.6.2
   flutter_typeahead: ^4.3.7
   font_awesome_flutter: ^10.1.0
