--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   # widgets
   animations: ^2.0.7
   cached_network_image: ^3.2.3
-  cached_video_player: ^2.0.3
+  video_player: ^2.6.0
   expandable: ^5.0.1
   flutter_cache_manager: ^3.3.0
   flutter_custom_tabs: ^1.0.4
