--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,9 +19,9 @@ jobs:
           channel: stable
 
       - name: Cache flutter dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
-          path: /Users/runner/hostedtoolcache/flutter
+          path: ${{ env.PUB_CACHE }}
           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: |
             ${{ runner.os }}-flutter-
@@ -81,9 +81,9 @@ jobs:
           channel: stable
 
       - name: Cache flutter dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
-          path: /Users/runner/hostedtoolcache/flutter
+          path: ${{ env.PUB_CACHE }}
           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: |
             ${{ runner.os }}-flutter-
