--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   json_annotation: ^4.6.0
   loggy: ^2.0.3
   flutter_loggy: ^2.0.2
+  flutter_loggy_dio: ^3.0.1
   mime: ^1.0.2
   mutex: ^3.0.1
   notified_preferences: ^2.0.0
