--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   permission_handler: ^10.0.0
   pub_semver: ^2.1.3
   relative_time: ^3.0.0
+  rxdart: ^0.27.7
   share_plus: ^6.3.1
   shared_storage: ^0.7.0
   sqlite3_flutter_libs: ^0.5.13
