--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: e1547
 description: A mobile app for e621+e926.
-version: 16.0.0-beta.1+78
+version: 16.1.0+79
 publish_to: none
 
 environment:
@@ -49,7 +49,7 @@ dependencies:
   drift: ^2.3.0
   external_path: ^1.0.1
   filesize: ^2.0.1
-  flutter_local_notifications: ^12.0.3
+  flutter_local_notifications: ^14.1.0
   freezed_annotation: ^2.0.3
   image_gallery_saver: ^1.7.1
   intl: ^0.18.0
@@ -66,7 +66,7 @@ dependencies:
   path_to_regexp: ^0.4.0
   permission_handler: ^10.0.0
   pub_semver: ^2.1.3
-  relative_time: ^3.0.0
+  relative_time: ^4.0.1
   rxdart: ^0.27.7
   share_plus: ^6.3.1
   shared_storage: ^0.7.0
