--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,70 +1,51 @@
 name: Application Release
 
 on:
-  release:
-    types:
-      - published
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to bump'
+        required: true
+        type: choice
+        default: 'none'
+        options:
+          - none
+          - patch
+          - minor
+          - major
+      release_title:
+        description: 'Release title'
+        type: string
+        required: false
+
+env:
+  VERSION_BUMP: ${{ github.event.inputs.version }}
+  RELEASE_TITLE: ${{ github.event.inputs.release_title }}
 
 jobs:
-  ios-build:
-    runs-on: macos-latest
-    steps:
-      - name: setup actions
-        uses: actions/checkout@v3
-
-      - name: setup flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-
-      - name: Cache flutter dependencies
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.PUB_CACHE }}
-          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
-
-      - name: get dependencies
-        run: flutter pub get
-
-      - name: build release
-        run: flutter build ios --no-codesign
-
-      - name: package release
-        run: |
-          cd build/ios/iphoneos
-          mkdir Payload
-          mv Runner.app Payload/Runner.app
-          zip -9 -r e1547.zip Payload
-          mv e1547.zip ../../../e1547.ipa
-
-      - name: upload release to artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: release-ios
-          path: e1547.ipa
-
-      - name: upload release to assets
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: e1547.ipa
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   android-build:
     runs-on: ubuntu-latest
     steps:
       - name: setup actions
         uses: actions/checkout@v3
 
-      - name: setup java
-        uses: actions/setup-java@v3
+      - name: setup ruby
+        uses: ruby/setup-ruby@v1
         with:
-          distribution: zulu
-          java-version: '12'
+          ruby-version: '3.0'
+          bundler-cache: true
+
+      - name: setup flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+
+      - name: cache flutter dependencies
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.PUB_CACHE }}
+          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: ${{ runner.os }}-flutter-
 
       - name: configure release keys
         env:
@@ -75,39 +56,146 @@ jobs:
           echo "$KEYSTORE" | base64 -d > android/keys/key.pkcs
           echo "$KEYCONFIG" | base64 -d > android/keys/key.properties
 
+      - name: build APK
+        run: bundle exec fastlane android build
+
+      - name: build AAB
+        run: bundle exec fastlane android build_aab
+
+      - name: package release
+        run: |
+          mv build/app/outputs/flutter-apk/app-release.apk app-release.apk
+          mv build/app/outputs/bundle/release/app-release.aab app-release.aab
+
+      - name: upload APK to artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-apk
+          path: app-release.apk
+
+      - name: upload AAB to artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-aab
+          path: app-release.aab
+
+  ios-build:
+    runs-on: macos-latest
+    steps:
+      - name: setup actions
+        uses: actions/checkout@v3
+
+      - name: setup ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.0'
+          bundler-cache: true
+
       - name: setup flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
 
-      - name: Cache flutter dependencies
+      - name: cache flutter dependencies
         uses: actions/cache@v3
         with:
           path: ${{ env.PUB_CACHE }}
           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
+          restore-keys: ${{ runner.os }}-flutter-
 
-      - name: get dependencies
-        run: flutter pub get
-
-      - name: build release
-        run: flutter build apk
+      - name: build IPA
+        run: bundle exec fastlane ios build
 
       - name: package release
         run: |
-          mv build/app/outputs/flutter-apk/app-release.apk e1547.apk
+          cd build/ios/iphoneos
+          mkdir Payload
+          mv Runner.app Payload/Runner.app
+          zip -r Runner.ipa Payload
 
-      - name: upload release to artifacts
-        uses: actions/upload-artifact@v3
+      - name: upload IPA to artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-ios
+          path: Runner.ipa
+
+  release:
+    needs: [android-build, ios-build]
+    if: env.VERSION_BUMP != 'none'
+    runs-on: ubuntu-latest
+    steps:
+      - name: setup actions
+        uses: actions/checkout@v3
+
+      - name: setup ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.0'
+          bundler-cache: true
+
+      - name: setup flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+
+      - name: setup cider
+        run: pub global activate cider
+
+      - name: bump and release version
+        run: |
+          cider bump --bump-build ${{ env.VERSION_BUMP }}
+          cider release
+
+      - name: get new version
+        id: get_version
+        run: echo "::set-output name=VERSION::$(cider version)"
+
+      - name: write playstore changelogs
+        run: fastlane android changelog
+
+      - name: commit version increase
+        uses: EndBug/add-and-commit@v9
+        with:
+          message: increased version
+          default_author: github_actions
+
+      - name: get release notes for new version
+        id: get_notes
+        run: echo "::set-output name=NOTES::$(cider describe ${{ steps.get_version.outputs.VERSION }})"
+
+      - name: download APK from artifacts
+        uses: actions/download-artifact@v3
         with:
           name: release-apk
-          path: e1547.apk
 
-      - name: upload release to assets
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: download AAB from artifacts
+        uses: actions/download-artifact@v3
         with:
-          files: e1547.apk
+          name: release-aab
+
+      - name: download IPA from artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: release-ios
+
+      - name: arrange asset files
+        run: |
+          mkdir -p build/app/outputs/bundle/release
+          mv app-release.aab build/app/outputs/bundle/release/
+          mv app-release.apk e1547.apk
+          mv Runner.ipa e1547.ipa
+
+      - name: publish to Play Store
+        run: bundle exec fastlane android upload
+
+      - name: create release
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.get_version.outputs.VERSION }}
+          name: ${{ env.RELEASE_TITLE }}
+          body: ${{ steps.get_notes.outputs.NOTES }}
+          files: |
+            e1547.apk
+            e1547.ipa
