--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -121,7 +121,7 @@ jobs:
 
   release:
     needs: [android-build, ios-build]
-    if: ${{ env.VERSION_BUMP != 'none' }}
+    if: ${{ github.event.inputs.version != 'none' }}
     runs-on: ubuntu-latest
     steps:
       - name: setup actions
