--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -86,17 +86,12 @@ jobs:
       - name: setup actions
         uses: actions/checkout@v3
 
-      - name: setup ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '2.7'
-          bundler-cache: true
-
-      - name: (re)install cocoapods
+      - name: setup system Ruby
         run: |
-          gem uninstall cocoapods --all --executables
-          gem install cocoapods
-          pod setup
+          echo "export PATH=/usr/local/opt/ruby/bin:$PATH" >> $GITHUB_ENV
+          /usr/bin/ruby -v
+          gem install bundler
+          bundle install --path vendor/bundle
 
       - name: setup flutter
         uses: subosito/flutter-action@v2
