--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -126,6 +126,12 @@ jobs:
       - name: setup actions
         uses: actions/checkout@v3
 
+      - name: setup ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.0'
+          bundler-cache: true
+
       - name: setup flutter
         uses: subosito/flutter-action@v2
         with:
@@ -144,19 +150,7 @@ jobs:
         run: echo "::set-output name=VERSION::$(cider version)"
 
       - name: write playstore changelogs
-        run: |
-          while IFS= read -r line
-          do
-            if [[ $line == "## ["* ]]
-            then
-              version=$(echo $line | cut -d'[' -f 2 | cut -d']' -f 1)
-              build_number=$(echo $version | cut -d'+' -f 2)
-              description=$(cider describe $version)
-              changelog_dir="./fastlane/metadata/android/en-US/changelogs"
-              mkdir -p $changelog_dir
-              echo $description > "${changelog_dir}/${build_number}.txt"
-            fi
-          done < CHANGELOG.md
+        run: bundle exec fastlane android changelog
 
       - name: commit version increase
         uses: EndBug/add-and-commit@v9
