--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: e1547
-description: A mobile app for e621+e926.
+description: A sophisticated e621 browser
 version: 16.1.0+79
 publish_to: none
 
