--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,10 @@ dependencies:
   flutter_cache_manager: ^3.3.0
   flutter_custom_tabs: ^1.0.4
   flutter_screen_lock: ^9.0.1
-  flutter_sub: ^2.1.1
-  flutter_sub_provider: ^2.0.0
+  flutter_sub: ^3.0.0
+  flutter_sub_provider: ^3.0.0
   flutter_staggered_grid_view: ^0.6.2
-  flutter_typeahead: ^4.3.7
+  flutter_typeahead: ^4.6.2
   font_awesome_flutter: ^10.1.0
   grouped_list: ^5.1.2
   infinite_scroll_pagination: ^4.0.0-dev.1
@@ -49,9 +49,9 @@ dependencies:
   drift: ^2.3.0
   external_path: ^1.0.1
   filesize: ^2.0.1
-  flutter_local_notifications: ^14.1.0
+  flutter_local_notifications: ^15.1.0+1
   freezed_annotation: ^2.0.3
-  image_gallery_saver: ^1.7.1
+  image_gallery_saver: ^2.0.3
   intl: ^0.18.0
   json_annotation: ^4.6.0
   loggy: ^2.0.3
