--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,16 +12,16 @@ dependencies:
   # widgets
   animations: ^2.0.7
   cached_network_image: ^3.2.3
-  video_player: ^2.6.0
+  video_player: ^2.7.0
   expandable: ^5.0.1
-  flutter_cache_manager: ^3.3.0
+  flutter_cache_manager: ^3.3.1
   flutter_custom_tabs: ^1.0.4
   flutter_screen_lock: ^9.0.1
   flutter_sub: ^3.0.0
   flutter_sub_provider: ^3.0.0
-  flutter_staggered_grid_view: ^0.6.2
+  flutter_staggered_grid_view: ^0.7.0
   flutter_typeahead: ^4.6.2
-  font_awesome_flutter: ^10.1.0
+  font_awesome_flutter: ^10.5.0
   grouped_list: ^5.1.2
   infinite_scroll_pagination: ^4.0.0-dev.1
   keyboard_dismisser: ^3.0.0
@@ -35,22 +35,22 @@ dependencies:
     git:
       url: https://github.com/clragon/sliding_sheet.git
       ref: be64d6d
-  sliver_tools: ^0.2.9
-  webview_flutter: ^4.0.5
+  sliver_tools: ^0.2.12
+  webview_flutter: ^4.2.2
 
   # data
   app_links: ^3.3.0
   async: ^2.9.0
   collection: ^1.16.0
   crypto: ^3.0.1
-  dio: ^5.0.1
+  dio: ^5.3.2
   dio_cache_interceptor: ^3.4.0
   dio_cache_interceptor_db_store: ^5.1.0
-  drift: ^2.3.0
+  drift: ^2.10.0
   external_path: ^1.0.1
   filesize: ^2.0.1
   flutter_local_notifications: ^15.1.0+1
-  freezed_annotation: ^2.0.3
+  freezed_annotation: ^2.4.1
   image_gallery_saver: ^2.0.3
   intl: ^0.18.0
   json_annotation: ^4.6.0
@@ -60,26 +60,26 @@ dependencies:
   mime: ^1.0.2
   mutex: ^3.0.1
   notified_preferences: ^2.0.0
-  package_info_plus: ^3.0.3
+  package_info_plus: ^4.1.0
   path: ^1.8.2
   path_provider: ^2.0.13
   path_to_regexp: ^0.4.0
-  permission_handler: ^10.0.0
+  permission_handler: ^10.4.3
   pub_semver: ^2.1.3
   relative_time: ^4.0.1
   rxdart: ^0.27.7
-  share_plus: ^6.3.1
+  share_plus: ^7.1.0
   shared_storage: ^0.8.0
   sqlite3_flutter_libs: ^0.5.13
-  store_checker: ^1.1.0
-  url_launcher: ^6.1.10
+  store_checker: ^1.3.0
+  url_launcher: ^6.1.12
   username_generator:
     git:
       url: https://github.com/clragon/username_generator.git
       ref: 16badbb
-  wakelock: ^0.6.1+2
+  wakelock_plus: ^1.1.1
   webview_cookie_manager: ^2.0.6
-  window_manager: ^0.3.1
+  window_manager: ^0.3.5
   workmanager: ^0.5.1
 
   flutter:
@@ -91,7 +91,7 @@ dependency_overrides:
   infinite_scroll_pagination:
     git:
       url: https://github.com/clragon/infinite_scroll_pagination.git
-      ref: 44f3eb
+      ref: 0078c43
   workmanager:
     git:
       url: https://github.com/fluttercommunity/flutter_workmanager.git
