--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: e1547
 description: A sophisticated e621 browser
-version: 16.2.8+88
+version: 16.2.8-video-beta.8+88
 publish_to: none
 
 environment:
@@ -12,8 +12,10 @@ dependencies:
   # widgets
   animations: ^2.0.7
   cached_network_image: ^3.2.3
-  video_player: ^2.7.0
   expandable: ^5.0.1
+  media_kit: ^1.1.6
+  media_kit_video: ^1.1.7
+  media_kit_libs_video: ^1.0.0
   flutter_cache_manager: ^3.3.1
   flutter_custom_tabs: ^1.0.4
   flutter_screen_lock: ^9.0.1
