--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,15 +100,15 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
   flutter_launcher_icons: ^0.13.0
-  flutter_native_splash: ^2.2.16
+  flutter_native_splash: ^2.3.1
 
   # dart run build_runner build
-  build_runner: ^2.1.11
-  drift_dev: ^2.0.1
-  freezed: ^2.0.3+1
-  json_serializable: ^6.3.1
+  build_runner: ^2.4.6
+  drift_dev: ^2.11.0
+  freezed: ^2.4.1
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
