--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   flutter_typeahead: ^4.6.2
   font_awesome_flutter: ^10.5.0
   grouped_list: ^5.1.2
-  infinite_scroll_pagination: ^4.0.0-dev.1
+  infinite_scroll_pagination: ^4.0.0
   keyboard_dismisser: ^3.0.0
   like_button: ^2.0.4
   local_auth: ^2.1.5
@@ -91,7 +91,7 @@ dependency_overrides:
   infinite_scroll_pagination:
     git:
       url: https://github.com/clragon/infinite_scroll_pagination.git
-      ref: 4.0.0-dev.1
+      ref: 4.1.0-dev.1
   workmanager:
     git:
       url: https://github.com/fluttercommunity/flutter_workmanager.git
