--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: e1547
 description: A sophisticated e621 browser
-version: 16.2.8-video-beta.8+88
+version: 17.0.0-beta.1+88
 publish_to: none
 
 environment:
