updated empty avatar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icon/app/round.png
+    - assets/icon/app/user.png
   fonts:
     - family: JetBrains Mono
       fonts:
