--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: none
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
-  flutter: '>=3.13.9 <4.0.0'
+  flutter: '>=3.16.0 <4.0.0'
 
 dependencies:
 
@@ -49,7 +49,7 @@ dependencies:
   drift: ^2.11.1
   external_path: ^1.0.1
   filesize: ^2.0.1
-  flutter_local_notifications: ^15.1.0+1
+  flutter_local_notifications: ^16.2.0
   freezed_annotation: ^2.4.1
   image_gallery_saver: ^2.0.3
   intl: ^0.18.0
@@ -60,14 +60,14 @@ dependencies:
   mime: ^1.0.2
   mutex: ^3.0.1
   notified_preferences: ^2.0.0
-  package_info_plus: ^4.1.0
+  package_info_plus: ^5.0.1
   path: ^1.8.2
   path_provider: ^2.1.0
   path_to_regexp: ^0.4.0
-  permission_handler: ^10.4.3
+  permission_handler: ^11.1.0
   petitparser: ^6.0.1
   pub_semver: ^2.1.3
-  relative_time: ^4.0.1
+  relative_time: ^5.0.0
   rxdart: ^0.27.7
   share_plus: ^7.1.0
   shared_storage: ^0.8.0
@@ -101,7 +101,7 @@ dev_dependencies:
   # dart run build_runner build
   build_runner: ^2.4.6
   drift_dev: ^2.11.1
-  flutter_lints: ^2.0.2
+  flutter_lints: ^3.0.1
   # dart run flutter_launcher_icons
   flutter_launcher_icons: ^0.13.0
   # dart run flutter_native_splash:create
