--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,10 @@ environment:
   flutter: '>=3.16.0 <4.0.0'
 
 dependencies:
+  flutter:
+    sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # widgets
   animations: ^2.0.7
@@ -65,6 +69,7 @@ dependencies:
   permission_handler: ^11.1.0
   petitparser: ^6.0.1
   pub_semver: ^2.1.3
+  recase: ^4.1.0
   relative_time: ^5.0.0
   rxdart: ^0.27.7
   share_plus: ^7.1.0
@@ -80,11 +85,6 @@ dependencies:
   webview_cookie_manager: ^2.0.6
   window_manager: ^0.3.5
   workmanager: ^0.5.2
-
-  flutter:
-    sdk: flutter
-  flutter_localizations:
-    sdk: flutter
 
 dependency_overrides:
   infinite_scroll_pagination:
