--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   app_links: ^3.3.0
   async: ^2.9.0
   collection: ^1.16.0
+  deep_pick: ^1.0.0
   dio: ^5.3.2
   dio_cache_interceptor: ^3.4.0
   dio_cache_interceptor_db_store: ^5.1.0
