--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   intl: ^0.18.0
   json_annotation: ^4.8.1
   logging: ^1.2.0
+  meta: ^1.11.0
   mime: ^1.0.2
   mutex: ^3.0.1
   notified_preferences: ^2.0.0
