--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   photo_view: ^0.14.0
   provider: ^6.0.4
   pull_to_refresh: ^2.0.0
+  secure_app_switcher: ^0.1.0+1
   sliding_sheet:
     git:
       url: https://github.com/clragon/sliding_sheet.git
