--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: e1547
 description: A sophisticated e621 browser
-version: 18.0.0+90
+version: 18.1.0-beta.1+90
 publish_to: none
 
 environment:
