--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,8 +91,8 @@ dependencies:
 dependency_overrides:
   infinite_scroll_pagination:
     git:
-      url: https://github.com/clragon/infinite_scroll_pagination.git
-      ref: 4.1.0-dev.2
+      url: https://github.com/EdsonBueno/infinite_scroll_pagination.git
+      ref: e92ef95
   collection: 1.18.0
 
 dev_dependencies:
