--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: e1547
 description: A sophisticated e621 browser
-version: 18.1.0+91
+version: 19.0.0-beta.1+91
 publish_to: none
 
 environment:
