--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   filesize: ^2.0.1
   flutter_local_notifications: ^17.0.0
   freezed_annotation: ^2.4.1
+  html_character_entities: ^1.0.0+1
   image_gallery_saver: ^2.0.3
   intl: ^0.18.0
   json_annotation: ^4.8.1
