--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ dependencies:
   mime: ^1.0.6
   mutex: ^3.0.1
   notified_preferences: ^2.0.0
-  package_info_plus: ^5.0.1
+  package_info_plus: ^8.0.2
   path: ^1.8.2
   path_provider: ^2.1.0
   path_to_regexp: ^0.4.0
@@ -89,6 +89,7 @@ dependencies:
   webview_cookie_manager: ^2.0.6
   window_manager: ^0.4.3
   workmanager: ^0.5.2
+  drift_flutter: ^0.2.0
 
 dependency_overrides:
   infinite_scroll_pagination:
