--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,14 @@ dependencies:
 
   # widgets
   animations: ^2.0.7
-  cached_network_image: ^3.4.0
+  cached_network_image: ^3.4.1
   expandable: ^5.0.1
   media_kit: ^1.1.6
   media_kit_video: ^1.1.7
   media_kit_libs_video: ^1.0.0
   flutter_cache_manager: ^3.3.1
   flutter_custom_tabs: ^2.0.0+1
-  flutter_screen_lock: ^9.1.0
+  flutter_screen_lock: ^9.2.1
   flutter_sub: ^3.0.0
   flutter_sub_provider: ^3.0.0
   flutter_staggered_grid_view: ^0.7.0
@@ -37,22 +37,22 @@ dependencies:
   photo_view: ^0.15.0
   provider: ^6.1.2
   pull_to_refresh: ^2.0.0
-  secure_app_switcher: ^0.1.0+1
+  secure_app_switcher: ^1.0.0
   sliding_sheet:
     git:
       url: https://github.com/clragon/sliding_sheet.git
       ref: 0.6.0
-  webview_flutter: ^4.2.2
+  webview_flutter: ^4.3.2
 
   # data
-  app_links: ^6.3.2
+  app_links: ^6.3.3
   async: ^2.11.0
-  collection: ^1.16.0
+  collection: ^1.19.0
   deep_pick: ^1.0.0
-  dio: ^5.3.2
-  dio_cache_interceptor: ^3.4.0
-  dio_cache_interceptor_db_store: ^5.1.0
-  drift: ^2.21.0
+  dio: ^5.8.0+1
+  dio_cache_interceptor: ^3.5.1
+  dio_cache_interceptor_db_store: ^6.0.0
+  drift: ^2.25.1
   external_path: ^2.0.1
   filesize: ^2.0.1
   flutter_local_notifications: ^18.0.1
@@ -62,34 +62,34 @@ dependencies:
   intl: ^0.19.0
   json_annotation: ^4.8.1
   logging: ^1.2.0
-  meta: ^1.11.0
+  meta: ^1.15.0
   mime: ^1.0.6
   mutex: ^3.0.1
   notified_preferences: ^2.0.0
-  package_info_plus: ^8.0.2
-  path: ^1.8.2
+  package_info_plus: ^8.2.1
+  path: ^1.9.0
   path_provider: ^2.1.0
   path_to_regexp: ^0.4.0
   permission_handler: ^11.1.0
-  petitparser: ^6.0.1
-  pub_semver: ^2.1.3
+  petitparser: ^6.0.2
+  pub_semver: ^2.1.5
   recase: ^4.1.0
   relative_time: ^5.0.0
   rxdart: ^0.28.0
-  share_plus: ^10.0.0
+  share_plus: ^10.1.4
   shared_storage: ^0.8.1
-  sqlite3_flutter_libs: ^0.5.26
+  sqlite3_flutter_libs: ^0.5.30
   store_checker: ^1.3.0
   url_launcher: ^6.1.12
   username_generator:
     git:
       url: https://github.com/clragon/username_generator.git
       ref: 1.0.4
-  wakelock_plus: ^1.1.1
+  wakelock_plus: ^1.2.10
   webview_cookie_manager: ^2.0.6
   window_manager: ^0.4.3
   workmanager: ^0.5.2
-  drift_flutter: ^0.2.1
+  drift_flutter: ^0.2.4
 
 dependency_overrides:
   infinite_scroll_pagination:
@@ -101,15 +101,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   # dart run build_runner build
-  build_runner: ^2.4.6
-  drift_dev: ^2.19.1
+  build_runner: ^2.4.15
+  drift_dev: ^2.25.2
   flutter_lints: ^5.0.0
   # dart run flutter_launcher_icons
-  flutter_launcher_icons: ^0.14.1
+  flutter_launcher_icons: ^0.14.3
   # dart run flutter_native_splash:create
-  flutter_native_splash: ^2.4.0
-  freezed: ^2.4.1
-  json_serializable: ^6.7.1
+  flutter_native_splash: ^2.4.4
+  freezed: ^2.5.8
+  json_serializable: ^6.9.4
 
 flutter:
   uses-material-design: true
