--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: e1547
 description: A sophisticated e621 browser
-version: 20.2.0+98
+version: 20.2.0-from-rubble+98
 publish_to: none
 
 environment:
@@ -25,6 +25,7 @@ dependencies:
   flutter_custom_tabs: ^2.0.0+1
   flutter_screen_lock: ^9.2.1
   flutter_sub: ^3.0.0
+  fquery: 1.5.4-beta.2
   flutter_sub_provider: ^3.0.0
   flutter_staggered_grid_view: ^0.7.0
   flutter_typeahead: ^5.1.0
@@ -96,6 +97,9 @@ dependency_overrides:
       url: https://github.com/EdsonBueno/infinite_scroll_pagination.git
       ref: 4f65157
 
+# dart run build_runner build
+# dart run flutter_launcher_icons
+# dart run flutter_native_splash:create
 dev_dependencies:
   flutter_test:
     sdk: flutter
