--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 20.0.0+95
 publish_to: none
 
 environment:
-  sdk: '>=3.6.2 <4.0.0'
-  flutter: '>=3.27.4 <4.0.0'
+  sdk: ">=3.6.2 <4.0.0"
+  flutter: ">=3.27.4 <4.0.0"
 
 dependencies:
   flutter:
@@ -55,10 +55,11 @@ dependencies:
   drift: ^2.25.1
   external_path: ^2.0.1
   filesize: ^2.0.1
+  file_picker: ^9.0.0
   flutter_local_notifications: ^18.0.1
   freezed_annotation: ^2.4.1
   html_character_entities: ^1.0.0+1
-  image_gallery_saver: ^2.0.3
+  image_gallery_saver_plus: ^4.0.1
   intl: ^0.19.0
   json_annotation: ^4.8.1
   logging: ^1.2.0
@@ -77,7 +78,6 @@ dependencies:
   relative_time: ^5.0.0
   rxdart: ^0.28.0
   share_plus: ^10.1.4
-  shared_storage: ^0.8.1
   sqlite3_flutter_libs: ^0.5.30
   store_checker: ^1.3.0
   url_launcher: ^6.1.12
@@ -86,7 +86,7 @@ dependencies:
       url: https://github.com/clragon/username_generator.git
       ref: 1.0.4
   wakelock_plus: ^1.2.10
-  webview_cookie_manager: ^2.0.6
+  webview_cookie_manager_plus: ^2.0.16
   window_manager: ^0.4.3
   workmanager: ^0.5.2
   drift_flutter: ^0.2.4
@@ -96,6 +96,11 @@ dependency_overrides:
     git:
       url: https://github.com/EdsonBueno/infinite_scroll_pagination.git
       ref: b25e96d
+  workmanager:
+    git:
+      url: https://github.com/fluttercommunity/flutter_workmanager.git
+      path: workmanager
+      ref: main
 
 dev_dependencies:
   flutter_test:
